# webrtc-m94

./: .gitattributes
release-build/m94/arm64-v8a/: .ninja_deps  .ninja_log  args.gn  build.ninja  build_vars.json  libjingle_peerconnection_so.so.TOC
release-build/m94/arm64-v8a/clang_x64/: ijar
release-build/m94/arm64-v8a/gen.runtime/examples/: AppRTCMobile_test_apk.runtime_deps
release-build/m94/armeabi-v7a/: .ninja_deps  .ninja_log  args.gn  build.ninja  build.ninja.d  build_vars.json  libjingle_peerconnection_so.so.TOC
release-build/m94/armeabi-v7a/clang_x64/: toolchain.ninja
release-build/m94/armeabi-v7a/gen.runtime/base/: base_i18n_perftests__test_runner_script.runtime_deps  base_perftests__test_runner_script.runtime_deps  base_unittests__test_runner_script.runtime_deps
release-build/m94/x86/: .ninja_deps  .ninja_log  args.gn  build.ninja  build.ninja.d  build_vars.json  libjingle_peerconnection_so.so.TOC
release-build/m94/x86_64/: .ninja_deps  .ninja_log  args.gn  build_vars.json  libjingle_peerconnection_so.so.TOC
release-build/m94/x86_64/clang_x64/: nasm  toolchain.ninja
release-build/m94/x86_64/gen.runtime/base/: base_unittests__test_runner_script.runtime_deps
